--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,7 @@ MarkupSafe==1.1.1
 requests==2.25.1
 six==1.15.0
 spotipy==2.16.1
+sql-alchemy-db==0.0.4
+SQLAlchemy==1.3.10
 urllib3==1.26.2
 Werkzeug==1.0.1
